--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
+    "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.5",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   },
